--- a/index.html
+++ b/index.html
@@ -6,20 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <title>Liquor Store</title>
 </head>
 
 <body>
     <!--              HEADER START               -->
 
     <header>
-        <section>
+        <section id="header_area">
+            <div class="container">
+                <div class="header-box">
+                    <div class="number">
+                        <div class="telephone-box">
+                            <i class="bi bi-telephone"></i>
+                            <p>+00 1234 567</p>
+                        </div>
+                        <div class="email-box">
+                            <i class="bi bi-send"></i>
+                            <p>youremail@email.com</p>
+                        </div>
+                    </div>
 
+                    <div class="social">
+                        <div class="header-icon">
+                            <i class="bi bi-facebook"></i>
+                            <i class="bi bi-twitter"></i>
+                            <i class="bi bi-instagram"></i>
+                            <i class="bi bi-whatsapp"></i>
+                        </div>
+                        <div class="header-link">
+                            <a href="">sign up</a>
+                            <a href="">log in</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+
+
+       <section id="nav_area">
+           <div class="container">
+              <div class="nav-box">
+                <h1>liquor store</h1>
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="">home</a></li>
+                        <li><a href="">about</a></li>
+                        <li>
+                            <form action="">
+                                <select name="" id="">
+                                    <option value="" disabled selected>products</option>
+                                    <option value=""><a href="">Single Product</a></option>
+                                </select>
+                            </form>
+                        </li>
+                        <li><a href="">blog</a></li>
+                        <li><a href="">contact</a></li>
+                        <li><a href=""><i class="bi bi-bag-check"></i></a></li>
+                    </ul>
+                    <i class="bi bi-list"></i>
+                </div>
+              </div>
+           </div>
+       </section>
     </header>
-
-
     <!--              HEADER END                 -->
 </body>
 
