--- a/index.html
+++ b/index.html
@@ -47,33 +47,45 @@
         </section>
 
 
-       <section id="nav_area">
-           <div class="container">
-              <div class="nav-box">
-                <h1>liquor store</h1>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="">home</a></li>
-                        <li><a href="">about</a></li>
-                        <li>
-                            <form action="">
-                                <select name="" id="">
-                                    <option value="" disabled selected>products</option>
-                                    <option value=""><a href="">Single Product</a></option>
-                                </select>
-                            </form>
-                        </li>
-                        <li><a href="">blog</a></li>
-                        <li><a href="">contact</a></li>
-                        <li><a href=""><i class="bi bi-bag-check"></i></a></li>
-                    </ul>
-                    <i class="bi bi-list"></i>
+        <section id="nav_area">
+            <div class="container">
+                <div class="nav-box">
+                    <h1>liquor store</h1>
+                    <div class="nav-list">
+                        <ul>
+                            <li><a href="">home</a></li>
+                            <li><a href="">about</a></li>
+                            <li>
+                                <form action="">
+                                    <select name="" id="">
+                                        <option value="" disabled selected>products</option>
+                                        <option value=""><a href="">Single Product</a></option>
+                                    </select>
+                                </form>
+                            </li>
+                            <li><a href="">blog</a></li>
+                            <li><a href="">contact</a></li>
+                            <li><a href=""><i class="bi bi-bag-check"></i></a></li>
+                        </ul>
+                        <i class="bi bi-list"></i>
+                    </div>
                 </div>
-              </div>
-           </div>
-       </section>
+            </div>
+        </section>
     </header>
     <!--              HEADER END                 -->
+
+    <!--              MAIN START                 -->
+          <main>
+            <section id="good">
+                 <div class="good-text">
+                    <h1>Good Drink for Good Moments.</h1>
+                    <button class="shop"><span>Shop Now</span></button>
+                    <button class="read"><span>Read more</span></button>
+                 </div>
+            </section>
+          </main>
+    <!--              MAIN END                   -->
 </body>
 
 </html>
