--- a/about.html
+++ b/about.html
@@ -1,92 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Liquor Store</title>
 </head>
-
 <body>
-    <!--              HEADER START               -->
+ <!--              HEADER START               -->
 
-    <header>
-        <section id="header_area">
-            <div class="container">
-                <div class="header-box">
-                    <div class="number">
-                        <div class="telephone-box">
-                            <i class="bi bi-telephone"></i>
-                            <p>+00 1234 567</p>
-                        </div>
-                        <div class="email-box">
-                            <i class="bi bi-send"></i>
-                            <p>youremail@email.com</p>
-                        </div>
+ <header>
+    <section id="header_area">
+        <div class="container">
+            <div class="header-box">
+                <div class="number">
+                    <div class="telephone-box">
+                        <i class="bi bi-telephone"></i>
+                        <p>+00 1234 567</p>
                     </div>
+                    <div class="email-box">
+                        <i class="bi bi-send"></i>
+                        <p>youremail@email.com</p>
+                    </div>
+                </div>
 
-                    <div class="social">
-                        <div class="header-icon">
-                            <i class="bi bi-facebook"></i>
-                            <i class="bi bi-twitter"></i>
-                            <i class="bi bi-instagram"></i>
-                            <i class="bi bi-whatsapp"></i>
-                        </div>
-                        <div class="header-link">
-                            <a href="">sign up</a>
-                            <a href="">log in</a>
-                        </div>
+                <div class="social">
+                    <div class="header-icon">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-twitter"></i>
+                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-whatsapp"></i>
+                    </div>
+                    <div class="header-link">
+                        <a href="">sign up</a>
+                        <a href="">log in</a>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
 
-        <section id="nav_area">
-            <div class="container">
-                <div class="nav-box">
-                    <h1>liquor store</h1>
-                    <div class="nav-list">
-                        <ul>
-                            <li><a href="/index.html">home</a></li>
-                            <li><a href="/about.html">about</a></li>
-                            <li>
-                                <form action="">
-                                    <select name="" id="">
-                                        <option value="" disabled selected>products</option>
-                                        <option value=""><a href="">Single Product</a></option>
-                                    </select>
-                                </form>
-                            </li>
-                            <li><a href="">blog</a></li>
-                            <li><a href="">contact</a></li>
-                            <li><a href="">cart</a></li>
-                        </ul>
-                    </div>
-                    <i class="bi bi-list"></i>
+    <section id="nav_area">
+        <div class="container">
+            <div class="nav-box">
+                <h1>liquor store</h1>
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="">home</a></li>
+                        <li><a href="">about</a></li>
+                        <li>
+                            <form action="">
+                                <select name="" id="">
+                                    <option value="" disabled selected>products</option>
+                                    <option value=""><a href="">Single Product</a></option>
+                                </select>
+                            </form>
+                        </li>
+                        <li><a href="">blog</a></li>
+                        <li><a href="">contact</a></li>
+                        <li><a href="">cart</a></li>
+                    </ul>
                 </div>
+                <i class="bi bi-list"></i>
             </div>
-        </section>
-    </header>
-    <!--              HEADER END                 -->
+        </div>
+    </section>
+</header>
+<!--              HEADER END                 -->
 
-    <!--              MAIN START                 -->
+<!--              MAIN START                 -->
     <main>
-
-        <section id="good">
-            <div class="good-text">
-                <h1>Good Drink for Good Moments.</h1>
-                <button class="shop"><span>Shop Now</span></button>
-                <button class="read"><span>Read more</span></button>
-            </div>
-        </section>
-
         <section id="online">
             <div class="container">
                 <div class="row">
@@ -165,7 +154,6 @@
             </div>
         </section>
 
-
         <section id="tequila">
             <div class="container">
                 <div class="row">
@@ -232,114 +220,7 @@
             </div>
         </section>
 
-        <section id="tastefully">
-            <div class="container">
-                <div class="row">
-                    <div class="tastefully-text">
-                        <p>Our Delightful offerings</p>
-                        <h1>Tastefully Yours</h1>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-1.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p>Brandy</p>
-                             <h1>Bacardi 151</h1>
-                             <p>$49.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-2.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Gin</p>
-                             <h1>Jim Beam Kentucky Straight</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-3.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Rum</p>
-                             <h1>Citadelle</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-4.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Rum</p>
-                             <h1>The Glenlivet</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-5.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Whiskey</p>
-                             <h1>Black Label</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-6.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Tequila</p>
-                             <h1>Macallan</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-7.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Vodka</p>
-                             <h1>Old Monk</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-8.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Whiskey</p>
-                             <h1>Jameson Irish Whiskey</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
-                    </div>
-
-                    
-                </div>
-            </div>
-
-
-        </section>
     </main>
-    <!--              MAIN END                   -->
+<!--              MAIN END                   -->
 </body>
-
 </html>
