--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
                 <h1>liquor store</h1>
                 <div class="nav-list">
                     <ul>
-                        <li><a href="">home</a></li>
-                        <li><a href="">about</a></li>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="/about.html">about</a></li>
                         <li>
                             <form action="">
                                 <select name="" id="">
