home products created

--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
                         <div class="card" style="width: 100%;">
                             <div class="image"><img src="./assets/images/prod-1.jpg" class="card-img-top" alt="..."></div>
                             <div class="card-body">
-                             <p>Brandy</p>
+                             <div class="sale">Sale</div>
+                             <p class="name">Brandy</p>
                              <h1>Bacardi 151</h1>
                              <p>$49.00</p>
                             </div>
@@ -256,6 +257,7 @@
                         <div class="card" style="width: 100%;">
                            <div class="image"> <img src="./assets/images/prod-2.jpg" class="card-img-top" alt="..."></div>
                             <div class="card-body">
+                                <div class="best">Best Seller</div>
                              <p class="name">Gin</p>
                              <h1>Jim Beam Kentucky Straight</h1>
                              <p>$69.00</p>
@@ -267,6 +269,7 @@
                         <div class="card" style="width: 100%;">
                            <div class="image"> <img src="./assets/images/prod-3.jpg" class="card-img-top" alt="..."></div>
                             <div class="card-body">
+                            <div class="new">New Arrival</div>
                              <p class="name">Rum</p>
                              <h1>Citadelle</h1>
                              <p>$69.00</p>
@@ -334,9 +337,9 @@
 
                     
                 </div>
+                 
+                <button class="view"><span>View All Products<i class="bi bi-arrow-right"></i></span></button>
             </div>
-
-
         </section>
     </main>
     <!--              MAIN END                   -->
