new section at home

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <main>
 
         <section id="good">
-            <div class="good-text">
+            <div class="good-text" data-aos="fade-up">
                 <h1>Good Drink for Good Moments.</h1>
                 <button class="shop"><span>Shop Now</span></button>
                 <button class="read"><span>Read more</span></button>
@@ -88,7 +88,7 @@
         </section>
 
         <section id="online">
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="card mb-3" style="max-width: 100%;">
@@ -149,7 +149,7 @@
             <div class="container">
                 <div class="desire-box">
                     <div class="image"><img src="./assets/images/about.jpg" alt=""></div>
-                    <div class="desire-text">
+                    <div class="desire-text" data-aos="fade-up">
                         <p class="since">Since 1905</p>
                         <h2>Desire Meets A New Taste</h2>
                         <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
@@ -167,7 +167,7 @@
 
 
         <section id="tequila">
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
@@ -233,7 +233,8 @@
         </section>
 
         <section id="tastefully">
-            <div class="container">
+
+            <div class="container" data-aos="fade-right">
                 <div class="row">
                     <div class="tastefully-text">
                         <p>Our Delightful offerings</p>
@@ -242,107 +243,271 @@
 
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-1.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <div class="sale">Sale</div>
-                             <p class="name">Brandy</p>
-                             <h1>Bacardi 151</h1>
-                             <p>$49.00</p>
+                            <div class="image"><img src="./assets/images/prod-1.jpg" class="card-img-top" alt="...">
                             </div>
-                          </div>
+                            <div class="card-body">
+                                <div class="sale">Sale</div>
+                                <p class="name">Brandy</p>
+                                <h1>Bacardi 151</h1>
+                                <p>$49.00</p>
+                            </div>
+                        </div>
                     </div>
 
 
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-2.jpg" class="card-img-top" alt="..."></div>
+                            <div class="image"> <img src="./assets/images/prod-2.jpg" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body">
                                 <div class="best">Best Seller</div>
-                             <p class="name">Gin</p>
-                             <h1>Jim Beam Kentucky Straight</h1>
-                             <p>$69.00</p>
+                                <p class="name">Gin</p>
+                                <h1>Jim Beam Kentucky Straight</h1>
+                                <p>$69.00</p>
                             </div>
-                          </div>
+                        </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-3.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                            <div class="new">New Arrival</div>
-                             <p class="name">Rum</p>
-                             <h1>Citadelle</h1>
-                             <p>$69.00</p>
+                            <div class="image"> <img src="./assets/images/prod-3.jpg" class="card-img-top" alt="...">
                             </div>
-                          </div>
-                    </div>
-
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-4.jpg" class="card-img-top" alt="..."></div>
                             <div class="card-body">
-                             <p class="name">Rum</p>
-                             <h1>The Glenlivet</h1>
-                             <p>$69.00</p>
+                                <div class="new">New Arrival</div>
+                                <p class="name">Rum</p>
+                                <h1>Citadelle</h1>
+                                <p>$69.00</p>
                             </div>
-                          </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-5.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Whiskey</p>
-                             <h1>Black Label</h1>
-                             <p>$69.00</p>
-                            </div>
-                          </div>
+                        </div>
                     </div>
 
 
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-6.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Tequila</p>
-                             <h1>Macallan</h1>
-                             <p>$69.00</p>
+                            <div class="image"><img src="./assets/images/prod-4.jpg" class="card-img-top" alt="...">
                             </div>
-                          </div>
+                            <div class="card-body">
+                                <p class="name">Rum</p>
+                                <h1>The Glenlivet</h1>
+                                <p>$69.00</p>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
-                            <div class="image"><img src="./assets/images/prod-7.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Vodka</p>
-                             <h1>Old Monk</h1>
-                             <p>$69.00</p>
+                            <div class="image"><img src="./assets/images/prod-5.jpg" class="card-img-top" alt="...">
                             </div>
-                          </div>
+                            <div class="card-body">
+                                <p class="name">Whiskey</p>
+                                <h1>Black Label</h1>
+                                <p>$69.00</p>
+                            </div>
+                        </div>
                     </div>
 
 
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
-                           <div class="image"> <img src="./assets/images/prod-8.jpg" class="card-img-top" alt="..."></div>
-                            <div class="card-body">
-                             <p class="name">Whiskey</p>
-                             <h1>Jameson Irish Whiskey</h1>
-                             <p>$69.00</p>
+                            <div class="image"> <img src="./assets/images/prod-6.jpg" class="card-img-top" alt="...">
                             </div>
-                          </div>
+                            <div class="card-body">
+                                <p class="name">Tequila</p>
+                                <h1>Macallan</h1>
+                                <p>$69.00</p>
+                            </div>
+                        </div>
                     </div>
 
-                    
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="card" style="width: 100%;">
+                            <div class="image"><img src="./assets/images/prod-7.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <p class="name">Vodka</p>
+                                <h1>Old Monk</h1>
+                                <p>$69.00</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="card" style="width: 100%;">
+                            <div class="image"> <img src="./assets/images/prod-8.jpg" class="card-img-top" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <p class="name">Whiskey</p>
+                                <h1>Jameson Irish Whiskey</h1>
+                                <p>$69.00</p>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
-                 
+
                 <button class="view"><span>View All Products<i class="bi bi-arrow-right"></i></span></button>
             </div>
         </section>
+
+
+        <section id="clients">
+            <div class="background-div">
+                <div class="container" data-aos="fade-up">
+                    <div class="row">
+                        <div class="clients-text">
+                            <p>Testimonial</p>
+                            <h1>Happy Clients</h1>
+                        </div>
+
+
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-title">
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonnantia there live the blind texts.</p>
+                                </div>
+                                <div class="card-text">
+                                    <div class="image"><img src="/assets/images/person_1.jpg" alt=""></div>
+                                    <div class="image-text">
+                                        <h3>Roger Scott</h3>
+                                        <p>Marketing Manager</p>
+                                    </div>
+                                </div>
+                                <div class="quote"><i class="bi bi-quote"></i></div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-title">
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonnantia there live the blind texts.</p>
+                                </div>
+                                <div class="card-text">
+                                    <div class="image"><img src="/assets/images/person_2.jpg" alt=""></div>
+                                    <div class="image-text">
+                                        <h3>Roger Scott</h3>
+                                        <p>Marketing Manager</p>
+                                    </div>
+                                </div>
+
+                                <div class="quote"><i class="bi bi-quote"></i></div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-title">
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonnantia there live the blind texts.</p>
+                                </div>
+                                <div class="card-text">
+                                    <div class="image"><img src="/assets/images/person_3.jpg" alt=""></div>
+                                    <div class="image-text">
+                                        <h3>Roger Scott</h3>
+                                        <p>Marketing Manager</p>
+                                    </div>
+                                </div>
+                                <div class="quote"><i class="bi bi-quote"></i></div>
+                            </div>
+                        </div>
+
+
+                        <div class="pagination">
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="recent">
+            <div class="container">
+                <div class="row">
+                    <div class="recent-text">
+                        <p>Blog</p>
+                        <h1>Recent Blog</h1>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="image"><img src="./assets/images/image_1.jpg" alt=""></div>
+                            <div class="card-text">
+                                <div class="date">
+                                    <i class="bi bi-calendar"></i>
+                                    <p>23 April 2020</p>
+                                </div>
+                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
+                                <p>A small river named Duden flows by their place and supplies it with the necessary
+                                    regelialia.</p>
+                                    <a href="#">Continue </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="image"><img src="./assets/images/image_2.jpg" alt=""></div>
+                            <div class="card-text">
+                                <div class="date">
+                                    <i class="bi bi-calendar"></i>
+                                    <p>23 April 2020</p>
+                                </div>
+                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
+                                <p>A small river named Duden flows by their place and supplies it with the necessary
+                                    regelialia.</p>
+                                    <a href="#">Continue </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="image"><img src="./assets/images/image_3.jpg" alt=""></div>
+                            <div class="card-text">
+                                <div class="date">
+                                    <i class="bi bi-calendar"></i>
+                                    <p>23 April 2020</p>
+                                </div>
+                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
+                                <p>A small river named Duden flows by their place and supplies it with the necessary
+                                    regelialia.</p>
+                                    <a href="#">Continue </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="image"><img src="./assets/images/image_4.jpg" alt=""></div>
+                            <div class="card-text">
+                                <div class="date">
+                                    <i class="bi bi-calendar"></i>
+                                    <p>23 April 2020</p>
+                                </div>
+                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
+                                <p>A small river named Duden flows by their place and supplies it with the necessary
+                                    regelialia.</p>
+                                    <a href="#">Continue </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+        </section>
     </main>
     <!--              MAIN END                   -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
