--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 <!--              MAIN START                 -->
     <main>
         <section id="online">
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="card mb-3" style="max-width: 100%;">
@@ -138,7 +138,7 @@
             <div class="container">
                 <div class="desire-box">
                     <div class="image"><img src="./assets/images/about.jpg" alt=""></div>
-                    <div class="desire-text">
+                    <div class="desire-text" data-aos="fade-up">
                         <p class="since">Since 1905</p>
                         <h2>Desire Meets A New Taste</h2>
                         <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
@@ -155,7 +155,7 @@
         </section>
 
         <section id="tequila">
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="card" style="width: 100%;">
@@ -220,7 +220,87 @@
             </div>
         </section>
 
+        <section id="clients">
+            <div class="background-div">
+                <div class="container" data-aos="fade-up">
+                    <div class="row">
+                        <div class="clients-text">
+                            <p>Testimonial</p>
+                            <h1>Happy Clients</h1>
+                        </div>
+
+
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-title">
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonnantia there live the blind texts.</p>
+                                </div>
+                                <div class="card-text">
+                                    <div class="image"><img src="/assets/images/person_1.jpg" alt=""></div>
+                                    <div class="image-text">
+                                        <h3>Roger Scott</h3>
+                                        <p>Marketing Manager</p>
+                                    </div>
+                                </div>
+                                <div class="quote"><i class="bi bi-quote"></i></div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-title">
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonnantia there live the blind texts.</p>
+                                </div>
+                                <div class="card-text">
+                                    <div class="image"><img src="/assets/images/person_2.jpg" alt=""></div>
+                                    <div class="image-text">
+                                        <h3>Roger Scott</h3>
+                                        <p>Marketing Manager</p>
+                                    </div>
+                                </div>
+
+                                <div class="quote"><i class="bi bi-quote"></i></div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-title">
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonnantia there live the blind texts.</p>
+                                </div>
+                                <div class="card-text">
+                                    <div class="image"><img src="/assets/images/person_3.jpg" alt=""></div>
+                                    <div class="image-text">
+                                        <h3>Roger Scott</h3>
+                                        <p>Marketing Manager</p>
+                                    </div>
+                                </div>
+                                <div class="quote"><i class="bi bi-quote"></i></div>
+                            </div>
+                        </div>
+                  
+
+                        <div class="pagination">
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                        </div>
+                  
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 <!--              MAIN END                   -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
