--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         </section>
 
         <section id="recent">
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <div class="row">
                     <div class="recent-text">
                         <p>Blog</p>
@@ -504,6 +504,52 @@
         </section>
     </main>
     <!--              MAIN END                   -->
+
+    <!--              FOOTER START               -->
+                  <footer>
+                    <section id="footer_area">
+                        <div class="container">
+                            <div class="footer-boxs">
+                                <div class="box1">
+                                    <h1>Liquor Store</h1>
+                                    <p>Far far away, behind the word mountains, far from the countries.</p>
+                                </div>
+                                <div class="box2">
+                                    <h1>My Accounts</h1>
+                                    <ul>
+                                        <li><a href="#">My Account</a></li>
+                                        <li><a href="#">Register</a></li>
+                                        <li><a href="#">Log in</a></li>
+                                        <li><a href="#">My Order</a></li>
+                                    </ul>
+                                </div>
+                                <div class="box3">
+                                    <h1>Information</h1>
+                                    <ul>
+                                        <li><a href="#">About us</a></li>
+                                        <li><a href="#">Catalog</a></li>
+                                        <li><a href="#">Contact us</a></li>
+                                        <li><a href="#">Term & Conditions</a></li>
+                                    </ul>
+                                </div>
+                                <div class="box4">
+                                    <h1>Quick Link</h1>
+                                    <ul>
+                                        <li><a href="#">New User</a></li>
+                                        <li><a href="#">Help Center</a></li>
+                                        <li><a href="#">Report Spam</a></li>
+                                        <li><a href="#">Faq's</a></li>
+                                    </ul>
+                                </div>
+                                <div class="box5">
+                                    <h1>Have a Questions?</h1>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                  </footer>
+    <!--               FOOTER END                -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
